RESOLVED FIXED279905
[GTK] compile error fatal error: cairo-pdf.h: No such file or directory
https://bugs.webkit.org/show_bug.cgi?id=279905
Summary [GTK] compile error fatal error: cairo-pdf.h: No such file or directory
Thomas Devoogdt
Reported 2024-09-18 09:45:32 PDT
fatal error: cairo-pdf.h: No such file or directory 43 | #include <cairo-pdf.h> | ^~~~~~~~~~~~~
Attachments
Thomas Devoogdt
Comment 1 2024-09-18 09:53:45 PDT
EWS
Comment 2 2024-09-18 12:10:06 PDT
Committed 283866@main (1d0e5ca6393e): <https://commits.webkit.org/283866@main> Reviewed commits have been landed. Closing PR #33838 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.