Cherry-pick 283866@main (1d0e5ca6393e). https://bugs.webkit.org/show_bug.cgi?id=279905

WebPrintOperationGtk.cpp: check the Cairo features properly

    https://bugs.webkit.org/show_bug.cgi?id=279905

    Reviewed by Michael Catanzaro.

    Cairo might be compiled without e.g. pdf, ps or svg support,
    just check that to avoid compile errors at build time.

    fatal error: cairo-pdf.h: No such file or directory
       43 | #include <cairo-pdf.h>
          |          ^~~~~~~~~~~~~

    Canonical link: https://commits.webkit.org/283866@main

Canonical link: https://commits.webkit.org/274313.432@webkitglib/2.44